# For-Yannis

./: .gitattributes  CMakeLists.txt  main.cc
core/: CMakeLists.txt
core/include/: resource_manager.h  resource_sprite.h  tilemap.h
core/src/: resource_sprite.cc  tilemap.cc
game/: CMakeLists.txt
game/include/: game.h
game/src/: Game.cc
